--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,8 @@
 /* Tailwind CSS Directives */
 @import "tailwindcss";
 
+@variant dark (&:where(.dark, .dark *));
+
 @theme {
   --color-primary-50: #ecfdf5;
   --color-primary-100: #d1fae5;
